UnionConstraintに任意の数の制約を指定可能

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "sourceMap": true,
     "strict": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "target": "es5"
   }
 }
