--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.7.1",
     "@types/webpack": "^4.32.1",
     "jest": "^24.8.0",
+    "pretty-format": "^24.9.0",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
@@ -33,9 +34,6 @@
   },
   "directories": {
     "test": "test"
-  },
-  "dependencies": {
-    "babel-jest": "^24.8.0"
   },
   "description": ""
 }
