--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "target": "es6"
+    "target": "es6",
+    "module": "commonjs",
+    "esModuleInterop": true
   }
 }
