--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^24.0.17",
-    "@types/node": "^12.7.1",
-    "@types/webpack": "^4.32.1",
-    "jest": "^24.8.0",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.4",
+    "@types/webpack": "^4.39.1",
+    "jest": "^24.9.0",
     "pretty-format": "^24.9.0",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
-    "typescript": "^3.6.1-rc",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6"
+    "typescript": "^3.6.2",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.8"
   },
   "jest": {
     "transform": {
