--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     },
     "globals": {
       "ts-jest": {
-        "tsConfig": "tsconfig.base.json"
+        "tsConfig": "tsconfig.json"
       }
     }
   },
