--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "ts-jest": "^24.1.0",
     "ts-loader": "^6.1.0",
     "ts-node": "^8.4.1",
-    "typescript": "^3.6.3",
+    "typescript": "^3.7.0-dev.20191001",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9"
   },
