--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hiroto/json-type-checker",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "main": "lib/index.js",
   "module": "esm/index.js",
   "unpkg": "unpkg/main.js",
@@ -9,7 +9,8 @@
     "build": "npm run build:cjs && npm run build:esm && npm run build:umd",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:esm": "tsc -p tsconfig.esm.json",
-    "build:umd": "webpack"
+    "build:umd": "webpack",
+    "prepare": "npm run build"
   },
   "files": [
     "lib",
